--- a/dashboard-contact.html
+++ b/dashboard-contact.html
@@ -46,13 +46,23 @@
               style="width: 4.5vw; height: auto; transform: rotate(45deg)"
             />
           </p>
-          <p>攤商管理<br />Dashboard</p>
+          <a
+            href="dashboard-TPABF.html"
+            style="text-decoration: none; color: black"
+            ><p>攤商管理<br />Dashboard</p></a
+          >
           <hr class="sidebar-hr" />
-          <p style="background-color: black; color: ghostwhite">
-            聯絡我們<br />Contact
-          </p>
+          <a href="dashboard-contact.html" style="text-decoration: none"
+            ><p style="background-color: black; color: ghostwhite">
+              聯絡我們<br />Contact
+            </p></a
+          >
           <hr class="sidebar-hr" />
-          <p>常見問題<br />FAQ</p>
+          <a
+            href="dashboard-FAQ.html"
+            style="text-decoration: none; color: black"
+            ><p>常見問題<br />FAQ</p></a
+          >
           <hr class="sidebar-hr" />
           <div class="sidebar-middle">
             <p class="rotated-link">
@@ -69,12 +79,13 @@
           >
         </td>
 
-        <td class="account">
+        <td class="admin">
           <div class="scroll-inner">
             <table width="100%">
               <tr>
                 <td style="border: none">
-                  <span class="label">聯絡方式 Contact Method</span><br />
+                  <h3>Contact Method</h3>
+                  <br />
 
                   <br />
                   <div
