feat: update loading indicators and improve contact information styling

--- a/account.html
+++ b/account.html
@@ -122,7 +122,9 @@
                       line-height: 2rem;
                     "
                   >
-                    <span style="font-size: 2rem" id="contact-person"></span>
+                    <span style="font-size: 2rem" id="contact-person"
+                      >🚧 讀取中…</span
+                    >
                   </div>
                 </td>
 
@@ -130,34 +132,36 @@
                 <td>
                   <span class="label">聯絡信箱 Contact Email</span><br /><span
                     id="contact-email"
-                  ></span>
+                    >🚧 讀取中…</span
+                  >
                 </td>
               </tr>
               <tr>
                 <td>
                   <span class="label">聯絡電話 Contact Phone</span><br /><span
                     id="contact-phone"
-                  ></span>
+                    >🚧 讀取中…</span
+                  >
                 </td>
               </tr>
               <tr>
                 <td>
                   <span class="label">Website</span><br />
-                  <span id="website"></span>
+                  <span id="website">🚧 讀取中…</span>
                 </td>
                 <td>
                   <span class="label">Instagram</span><br />
-                  <span id="instagram"></span>
+                  <span id="instagram">🚧 讀取中…</span>
                 </td>
               </tr>
               <tr>
                 <td>
                   <span class="label">Facebook</span><br />
-                  <span id="facebook"></span>
+                  <span id="facebook">🚧 讀取中…</span>
                 </td>
                 <td>
                   <span class="label">Whatsapp</span><br />
-                  <span id="whatsapp"></span>
+                  <span id="whatsapp">🚧 讀取中…</span>
                 </td>
               </tr>
             </table>
