fix: update account management label to 'Profile' and improve FAQ and contact page styling

--- a/dashboard-FAQ.html
+++ b/dashboard-FAQ.html
@@ -59,8 +59,8 @@
           >
           <hr class="sidebar-hr" />
           <a href="dashboard-FAQ.html" style="text-decoration: none"
-            ><p style="background-color: black; color: ghostwhite">
-              常見問題<br />FAQ
+            ><p>
+              <mark>常見問題<br />FAQ</mark>
             </p></a
           >
           <hr class="sidebar-hr" />
@@ -74,7 +74,12 @@
           </div>
           <a href="account.html" style="text-decoration: none"
             ><p style="background-color: blueviolet; color: ghostwhite">
-              帳號管理<br />Account
+              帳號管理<br />Profile
+            </p></a
+          >
+          <a href="index.html" style="text-decoration: none"
+            ><p style="background-color: black; color: whitesmoke">
+              登出<br />Log out
             </p></a
           >
         </td>
