--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -51,8 +51,8 @@
               style="width: 4.5vw; height: auto; transform: rotate(45deg)"
             />
           </p>
-          <p style="background-color: black; color: ghostwhite">
-            攤商管理<br />Dashboard
+          <p>
+            <mark>攤商管理<br />Dashboard</mark>
           </p>
           <hr class="sidebar-hr" />
           <a
@@ -77,7 +77,12 @@
           </div>
           <a href="account.html" style="text-decoration: none"
             ><p style="background-color: blueviolet; color: ghostwhite">
-              帳號管理<br />Account
+              帳號管理<br />Profile
+            </p></a
+          >
+          <a href="index.html" style="text-decoration: none"
+            ><p style="background-color: black; color: whitesmoke">
+              登出<br />Log out
             </p></a
           >
         </td>
@@ -515,6 +520,19 @@
                 <td colspan="3" style="border-top: none">
                   感謝您對本次徵件／申請活動的關注與投入。經過審慎評選，本屆草率季，我們收到了725封海內外具創意與潛力的申請作品／計畫。經評審團綜合討論後，遺憾地通知您，此次您所提交的申請未列入最終入選名單。<br />
                   我們非常感謝您願意分享您的創作／計畫，也十分肯定您在其中展現出的努力與思考。誠摯地希望未來仍有機會與您合作或再次收到您的申請。也歡迎您參與草率季的其他活動，或是持續關注我們的網站與社群媒體，了解更多最新消息。<br />
+                  祝一切順利，創作茂盛。<br /><br />
+                  草率季 2025.06.30<br />
+                  <small>hooroo@double-grass.com</small><br />
+                </td>
+              </tr>
+              <tr id="runnerup-letter" style="display: none">
+                <td colspan="3" style="border-top: none">
+                  感謝您對本次徵件／申請活動的關注與投入。<br /><br />
+                  經過審慎評選，本屆草率季，我們收到了725封來自海內外具創意與潛力的申請作品／計畫。<br />
+                  經評審團綜合討論後，您的申請目前列為備取，我們將於7/16日公布備取錄取、繳費通知。<br />
+                  <br />
+                  我們非常感謝您願意分享您的創作／計畫，也十分肯定您在其中展現出的努力與思考。誠摯地希望未來仍有機會與您合作或再次收到您的申請。也歡迎您參與草率季的其他活動，或是持續關注我們的網站與社群媒體，了解更多最新消息。<br />
+                  <br />
                   祝一切順利，創作茂盛。<br /><br />
                   草率季 2025.06.30<br />
                   <small>hooroo@double-grass.com</small><br />
