--- a/dashboard-contact.html
+++ b/dashboard-contact.html
@@ -53,8 +53,8 @@
           >
           <hr class="sidebar-hr" />
           <a href="dashboard-contact.html" style="text-decoration: none"
-            ><p style="background-color: black; color: ghostwhite">
-              聯絡我們<br />Contact
+            ><p>
+              <mark>聯絡我們<br />Contact</mark>
             </p></a
           >
           <hr class="sidebar-hr" />
@@ -74,7 +74,12 @@
           </div>
           <a href="account.html" style="text-decoration: none"
             ><p style="background-color: blueviolet; color: ghostwhite">
-              帳號管理<br />Account
+              帳號管理<br />Profile
+            </p></a
+          >
+          <a href="index.html" style="text-decoration: none"
+            ><p style="background-color: black; color: whitesmoke">
+              登出<br />Log out
             </p></a
           >
         </td>
